Changelog
=========

v0.1.1.0
========

Not released yet.

- New: support for raw queries.
- Fix: If-Modified-Since was not respected in GetAsync.

v0.1.0.1
========

Released on 26 November, 2014

- Initial release.